# ai-invention-c84097-reading-vector-patterns-rvp-a-cognitive

./: README.md
paper_latex/: paper.tex  references.bib
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  data.py  data_out_paws_metadata.json  data_out_paws_mini.json  data_out_paws_preview.json  data_out_qqp_metadata.json  data_out_qqp_mini.json  data_out_qqp_preview.json  mini_data_out.json  preview_data_out.json  process_datasets.py  pyproject.toml
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-1/src/: .sdk_openhands_agent_struct_out.json  README.md  full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml  test_dataset.json
round-1/research-1/: README.md
round-1/research-1/demo/: research_demo.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  research_out.json
round-2/experiment-1/: README.md
round-2/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-2/experiment-1/src/: .sdk_openhands_agent_struct_out.json  experiment_summary.txt  full_method_out.json  method.py  method_out_for_format.json  method_out_formatted.json  mini_method_out.json  mini_method_out_formatted.json  preview_method_out.json  run_log.txt  (+4 more)
round-2/research-1/: README.md
(+9 files in other folders)
