[project]
name = "quora-question-pairs-dataset"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "pandas==3.0.3",
    "numpy==2.4.6",
    "scikit-learn==1.9.0",
    "loguru==0.7.3",
    "joblib==1.5.3",
    "narwhals==2.22.1",
    "python-dateutil==2.9.0.post0",
    "scipy==1.17.1",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
